--- a/application/modules/admin/views/layouts/scripts/layout.phtml
+++ b/application/modules/admin/views/layouts/scripts/layout.phtml
@@ -1,49 +1,148 @@
-<?php echo $this->doctype();?>
+echo $this->doctype();?>
 <html>
 <head>
-<base href="<?php echo BASE_URL;?>"/>
+<base href="<?php echo BASE_URL;?>" />
 <?php echo $this->headMeta();?>
 <?php echo $this->headTitle();?>
 <?php echo $this->headLink();?>
-<link rel="stylesheet" media="screen" href="/css/superfish-navbar.css" /> 
-<!-- followin files are needed to make YUI editor work -->
-<!-- Skin CSS file -->
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.2r1/build/assets/skins/sam/skin.css">
-<!-- no such links in views, except it extremely needed -->
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Realist - The Ultimate Real Estate Theme</title>
+
+<link href="/css/960.css" rel="stylesheet" type="text/css" />
+<link href="/css/reset.css" rel="stylesheet" type="text/css" />
+<link href="/css/text.css" rel="stylesheet" type="text/css" />
+
+<link href="/css/style.css" rel="stylesheet" type="text/css" />
+
+<!-- These are all the different colour variations. To create your own please see the help file -->
+
+<!--<link href="/css/style_rouge.css" rel="stylesheet" type="text/css" />-->
+<!--<link href="/css/style_forest.css" rel="stylesheet" type="text/css" />-->
+<!--<link href="/css/style_lake.css" rel="stylesheet" type="text/css" />-->
+<!--<link href="/css/style_fame.css" rel="stylesheet" type="text/css" />-->
+<!--<link href="/css/style_old.css" rel="stylesheet" type="text/css" />-->
+
+<!-- Loads jquery -->
+<script type="text/javascript"
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<!-- Load expose, gallery -->
+<script type="text/javascript" src="/js/jquery.tools.min.js"></script>
+<!-- Fix all png images -->
+<script type="text/javascript" src="/js/pngfix/jquery.pngFix.js"></script>
+<!-- Loads cycle -->
+<script type="text/javascript" src="/js/jquery.cycle.all.min.js"></script>
+<!-- Loads tooltips -->
+<script type="text/javascript" src="/js/jquery.qtip.min.js"></script>
+<!-- Loads navigation menu -->
+<script type="text/javascript" src="/js/superfish.js"></script>
+<!-- Loads the include scripts -->
+<script type="text/javascript" src="/js/inc.js"></script>
+
 </head>
-<body class="yui-skin-sam admin">
-<!-- container is bluepring specific -->
-<div class='container'  id="container">
-<!-- blueprint specific-->
-<!-- start header -->
-<div id="header" class="header span-24 last">
-    <div id="logo" class='logo span-24 last'>
-        <a href='/app/index/index'><?php echo $this->logo('<h1>rentable</h1>', array( 'class' => 'widget-logo-index-top span-4'));?></a>
-    </div>
-	<div id="menu" class="menu span-21">
-            <?php if($this->menu):?>
-                <?php echo $this->menu; ?>
-            <?php endif;?>
-        </div>
-        <?php echo " ".$this->welcome('', array('welcome_class' => 'span-2 last', 'cart' => $this->memo)); ?>
-	
-</div>
-<!-- end header -->
-<div id="wrapper"  class='wrapper span-24 last'>
-		<!-- start content -->
-			<div id="content" class='content'>
-				<?php echo $this->layout()->content; ?>		
-			</div>	
-		<!-- end content -->
-</div>
-<!-- footer -->
-<div id="footer" class="footer span-24 last"><?php echo $this->render('_footer.phtml'); ?></div>
-<!-- end of footer -->	
-<!-- End of the container -->
-</div>
-<!--<div class='debug' id='debug'>Hey</div>
-<script>var elts = document.getElementsByTagName('*').length;document.getElementById('debug').innerHTML = ' Number of elements on this page <strong>'+elts+' </strong>';</script>-->
-<!-- Utility Dependencies -->
+
+<body>
+
+	<div class="container_12">
+
+		<!-- This is the faint shine effect -->
+
+		<div id="wrap">
+			<!-- This is to fix postitioning bug in IE6 -->
+			<div id="header_shine"></div>
+		</div>
+
+		<!-- Spacers are used to generate equal spacing between grids -->
+		<div class="grid_12 spacer">&nbsp;</div>
+
+
+		<!-- The logo uses a background image and hides this text -->
+		<div class="grid_4 logo">
+
+			<h1>Realist - The Ultimate Real Estate Theme</h1>
+		</div>
+
+
+		<div class="grid_8 colour_darkest" id="phone_number">
+
+			<img src="/assets/images/phone_icon.jpg" alt=" " />01787 123456<br />
+			<span class="tagline">Call for free now</span>
+		</div>
+
+		<div class="grid_12 spacer">&nbsp;</div>
+
+		<div class="grid_12" id="nav">
+
+			<!-- The Navigation in simple list format -->
+			<ul class="sf-menu">
+
+				<li><a title="" href="index.html">Home</a></li>
+				<li><a title="" href="search_results.html">Buying</a>
+
+					<ul>
+						<li><a title="" href="page.html">Dropdown</a></li>
+						<li><a title="" href="page.html">Dropdown</a></li>
+						<li><a title="" href="page.html">Dropdown</a></li>
+						<li><a title="" href="page.html">Dropdown</a></li>
+						<li><a title="" href="page.html">An Example -</a>
+							<ul>
+								<li><a title="" href="page.html">Another</a></li>
+								<li><a title="" href="page.html">Another</a></li>
+								<li><a title="" href="page.html">Example -</a>
+									<ul>
+										<li><a title="" href="page.html">Oh Look</a></li>
+										<li><a title="" href="page.html">It's another!</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li><a title="" href="search_results.html">Renting</a></li>
+				<li><a title="" href="search_results.html">Selling</a>
+
+					<ul>
+						<li><a title="" href="page.html">Hello</a></li>
+						<li><a title="" href="page.html">how's you?</a></li>
+					</ul>
+				</li>
+				<li><a title="" href="news.html">News</a></li>
+				<li><a title="" href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<!-- nav -->
+
+		<div class="clear"></div>
+		<!-- Header finished, these are needed everytime a main section is eneded -->
+		 <?php echo " ".$this->welcome('', array('welcome_class' => 'span-2 last' )); ?>
+		<div class="spacer">&nbsp;</div>
+
+		
+
+		<!-- The wrapper section -->
+		<div id="wrapper" class="grid_12 omega wrapper" >
+			<?php echo $this->layout()->content; ?>
+		</div>
+
+
+		
+		<div id="footer" class="grid_12">
+		
+			<?php echo $this->render('_footer.phtml'); ?></div>
+
+			<!-- 
+			<p class="left">&copy; 2008-2009 The Ultimate Real Estate Theme</p>
+			<p class="right">
+				<a href="#">Terms &amp; Conditions</a> | <a href="#">Contact</a>
+			</p>
+			-->
+			
+			
+		</div>
+	</div>
+
+
+</body>
 <?php echo $this->headScript();?>
 <script src="http://yui.yahooapis.com/2.8.2r1/build/yahoo-dom-event/yahoo-dom-event.js"></script> 
 <script src="http://yui.yahooapis.com/2.8.2r1/build/element/element-min.js"></script> 
@@ -53,5 +152,4 @@
 <script src="http://yui.yahooapis.com/2.8.2r1/build/button/button-min.js"></script>
 <!-- Source file for Rich Text Editor-->
 <script src="http://yui.yahooapis.com/2.8.2r1/build/editor/editor-min.js"></script>
-</body>
 </html>
