--- a/application/modules/admin/views/scripts/user/delete.phtml
+++ b/application/modules/admin/views/scripts/user/delete.phtml
@@ -1,11 +1,6 @@
-<div id="" class="">
-	
-
-	<form action='' method='post'> 
-     	<?php if($this->message ):?>
-    	 	<?php $this->message($this->message );?>
-		<?php endif;?>
-		<?php echo $this->content;?><br/>
-    	<input id='button'  class='button' type='submit' value='Delete'/>
-    </form>
+<div id="" style="margin: auto 0;">	
+	<div id="">
+		<?php echo $this->content; ?>
+	</div>
 </div>
+
