--- a/application/views/layouts/scripts/layout.phtml
+++ b/application/views/layouts/scripts/layout.phtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Realist - The Ultimate Real Estate Theme</title>
+<title>diovax - i/o</title>
 
 <link href="/css/960.css" rel="stylesheet" type="text/css" />
 <link href="/css/reset.css" rel="stylesheet" type="text/css" />
@@ -50,15 +50,15 @@
         
         
         <!-- The logo uses a background image and hides this text -->
-        <div class="grid_4 logo">
-        
-        	<h1>Realist - The Ultimate Real Estate Theme </h1>
+        <!--<div class="grid_4 logo">-->
+         <div class="grid_4">
+        	<h1>diovax</h1>
         </div>
         
         
         <div class="grid_8 colour_darkest" id="phone_number">
         
-        	<img src="/assets/images/phone_icon.jpg" alt=" " />01787 123456<br />
+        	<img src="/assets/images/phone_icon.jpg" alt=" " /> 000-000-0000 <br />
             <span class="tagline">Call for free now</span>        </div>
         
    		<div class="grid_12 spacer">&nbsp;</div>
@@ -68,42 +68,22 @@
             <!-- The Navigation in simple list format -->
         	<ul class="sf-menu">
             
-              <li><a title="" href="index.html">Home</a></li>
-              <li><a title="" href="search_results.html">Buying</a>
-                
-                	<ul>
-                    	<li><a title="" href="page.html">Dropdown</a></li>
-                        <li><a title="" href="page.html">Dropdown</a></li>
-                        <li><a title="" href="page.html">Dropdown</a></li>
-                        <li><a title="" href="page.html">Dropdown</a></li>
-                        <li><a title="" href="page.html">An Example -</a>
-                        	<ul>
-                                <li><a title="" href="page.html">Another</a></li>
-                                <li><a title="" href="page.html">Another</a></li>
-                                <li><a title="" href="page.html">Example -</a>
-                                	<ul>
-                                        <li><a title="" href="page.html">Oh Look</a></li>
-                                        <li><a title="" href="page.html">It's another!</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-              </li>
-              <li><a title="" href="search_results.html">Renting</a></li>
-              <li><a title="" href="search_results.html">Selling</a>
-              
+              <li><a title="" href="/">Home</a></li>
+              <li><a title="" href="list">Renting</a></li>
+              <li><a title="" href="about">Services</a>
               		<ul>
-                    	<li><a title="" href="page.html">Hello</a></li>
-                        <li><a title="" href="page.html">how's you?</a></li>
+                    	<li><a title="" href="quote">Quote</a></li>
+                        <li><a title="" href="policy">Our Policy</a></li>
                     </ul>
               </li>
-              <li><a title="" href="news.html">News</a></li>
-              <li><a title="" href="contact.html">Contact</a></li>
+              <li><a title="" href="contact">Contact</a></li>
           </ul>
         </div> <!-- nav -->
         
     <div class="clear"></div> <!-- Header finished, these are needed everytime a main section is eneded -->
+    
+    
+    
     
     <div class="spacer">&nbsp;</div>
   	<!-- The wrapper section -->
